# rbe_afe

./: .gitignore
MARIADB/: Script-7.sql  liquibase.properties  update.yml
RustBackend/: .gitignore  Cargo.toml
RustBackend/src/: handlers.rs  main.rs  mariadb.rs  routes.rs
RustBackend/src/models/: housing.rs  music_models.rs  people.rs  users.rs
RustBackend/www/: hi.html
ang-app/: README.md  angular.json  package-lock.json  package.json
ang-app/src/app/: app.component.ts  app.config.ts  app.routes.ts  housing.service.ts  person.ts  rest-api.service.ts
ang-app/src/app/details/: details.component.html  details.component.ts
ang-app/src/app/home/: home.component.css  home.component.ts
ang-app/src/app/housing-location/: housing-location.component.css  housing-location.component.ts
ang-app/src/app/new-house/: new-house.component.spec.ts  new-house.component.ts
ang-app/src/app/people/: people.component.css  people.component.html  people.component.ts
ang-app/src/app/person-details/: person-details.component.html  person-details.component.ts
ang-app/src/app/songs-component/: songs-component.component.html  songs-component.component.spec.ts  songs-component.component.ts
