[package]
name = "GroupMusic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "runtime-async-std-native-tls", "mysql"] }
sqlx-mysql = "0.8.0"
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
serde_json = "1.0.122"
